--- a/web/config.json
+++ b/web/config.json
@@ -6,13 +6,17 @@
     "aws_https_hostname": "https://ec2-13-58-163-102.us-east-2.compute.amazonaws.com:",
     "https_port": "3001"
   },
-  "database" : {
+  "postgresql": {
     "host": "ec2-13-58-163-102.us-east-2.compute.amazonaws.com",
     "db": "ec2-user",
     "username": "ec2-user",
     "password": "",
     "port": "5432"
-
+  },
+  "mongodb": {
+    "user": "ec2-user",
+    "pwd": "",
+    "db": "admin"
   },
   "s3": {
     "bucketName": "",
