--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "bluebird": "^3.5.5",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.16.2",
     "fs": "0.0.1-security",
+    "mongoose": "^5.6.5",
     "morgan": "^1.9.1",
-    "path": "^0.12.7",
-    "pg-promise": "^8.7.5"
+    "pg-promise": "^8.7.5",
+    "socket.io": "^2.2.0"
   }
 }
