--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "fs": "0.0.1-security",
     "mongoose": "^5.6.5",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "pg-promise": "^8.7.5",
     "socket.io": "^2.2.0"
   }
