--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.501.0",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
