--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
     "mongoose": "^5.6.6",
