--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
+    "mime-types": "^2.1.24",
     "mongoose": "^5.6.6",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
