--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.0",
     "express-fileupload": "^1.1.5",
     "express-session": "^1.16.2",
+    "express-validator": "^6.1.1",
     "fs": "0.0.1-security",
     "mime-types": "^2.1.24",
     "mongoose": "^5.6.6",
