--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ typings/
 
 # any pem files that got loose
 *.pem
+
+# all .exe, .obj, .o, .stackdump files
+*.exe
+*.obj
+*.o
+*.stackdump
+*.core
